# cursos_fastapi

./: .gitignore  README.md
curso01/: .env  .gitignore  converter.py  main.py  pyproject.toml  routers.py  schamas.py
curso02/: Dockerfile  docker-compose.yml  pyproject.toml
curso02/app/: main.py
curso02/app/db/: connection.py  models.py
curso02/app/migrations/: env.py
curso02/app/migrations/versions/: 2f9be0d99582_add_category.py  861c76283622_add_product.py  8f31b2616449_add_user.py
curso02/app/routes/: category_routes.py  custom_paginate.py  deps.py  poc.py  product_routes.py  user_routes.py
curso02/app/schemas/: category.py  product.py  user.py
curso02/app/test/: conftest.py
curso02/app/test/routes/: test_category_routes.py  test_products_routes.py  test_user_routes.py
curso02/app/test/schemas/: test_category_schemas.py  test_products_schemas.py  test_user_schemas.py
curso02/app/test/use_cases/: test_category_use_cases.py  test_product_use_cases.py  test_user_use_cases.py
curso02/app/use_cases/: category.py  poc.py  product.py  user.py
